add production config (github keys)

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,3 +1,7 @@
 development:
   GITHUB_KEY: 005dea24d96993f09c3c
   GITHUB_SECRET: 4d0e5255a96a21c640b47b56551bd84ee9f1a5f6
+
+production:
+  GITHUB_KEY: f32bcb58e21879a57716
+  GITHUB_SECRET: 3bbee5342520120122814b5352bf842ec66f2c00
