add heroku dbpasses to configs

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,3 +1,13 @@
+<% if ENV['MONGOHQ_URL'] %>
+  production:
+    sessions:
+      default:
+        uri: <%= ENV['MONGOHQ_URL'] %>
+        options:
+          skip_version_check: true
+          safe: true
+<% end %>
+
 development:
   # Configure available database sessions. (required)
   sessions:
